# bob

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/bob/: __init__.py  cli.py  constants.py  jobserver.py  log.py  prelude.py
src/bob/api/: general.py  path.py  rule.py  scope.py  scoped_value.py  variable.py
src/bob/commands/: build.py  clean.py  compdb.py  completions.py  configure.py
src/bob/core/: configure.py  context.py
tests/: conftest.py  test_api.py  test_configure.py
tests/cases/: basic.bob  basic.ninja  description.bob  description.ninja  rule-input.bob  rule-input.ninja  scoped-value.bob  scoped-value.ninja
